--- a/Net 461/GoogleAuthDemoBarebones.Website/Views/Shared/_Layout.cshtml
+++ b/Net 461/GoogleAuthDemoBarebones.Website/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                
+                <li>@Html.ActionLink("Sign In", "SignIn", "Auth")</li>
             </ul>
         </div>
     </div>
